Added a couple of new localizations Fixes #2

--- a/src/main/resources/jenkins/plugins/evolution/Messages.properties
+++ b/src/main/resources/jenkins/plugins/evolution/Messages.properties
@@ -1,3 +1,12 @@
 EvolutionRecorderDescriptor_displayName=Publish Evolution result report
 EvolutionProjectAction_scoreGraphName=Evolution score trend
 EvolutionProjectAction_derivativateGraphName=Evolution derviative trend
+
+
+EvolutionRecorder_performStart=Perform Evolution Tasks
+EvolutionRecorder_performEnd=Finished Evolution tasks
+
+BuildTaskController_readExistingResults=Read existing results
+BuildTaskController_noResults=No results available
+BuildTaskController_writeResults=Writing new results
+BuildTaskController_readResults=Reading {0} results
