--- a/src/main/resources/jenkins/plugins/evolution/Messages.properties
+++ b/src/main/resources/jenkins/plugins/evolution/Messages.properties
@@ -6,7 +6,8 @@ EvolutionProjectAction_derivativateGraphName=Evolution derviative trend
 EvolutionRecorder_performStart=Perform Evolution Tasks
 EvolutionRecorder_performEnd=Finished Evolution tasks
 
-BuildTaskController_readExistingResults=Read existing results
+BuildTaskController_readExistingResults=Reading existing results
 BuildTaskController_noResults=No results available
 BuildTaskController_writeResults=Writing new results
-BuildTaskController_readResults=Reading {0} results
+BuildTaskController_readResults=[{0}] Reading data from file
+BuildTaskController_readResults_PersistenceException=[{0}] {1}
